projects/trainingteam2024/backend-idea-jumble/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jumbledev-backend
  name: jumbledev-backend
  namespace: tt2024-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jumbledev-backend
  template:
    metadata:
      labels:
        app: jumbledev-backend
    spec:
      containers:
        - image: registry.coherent.in/backend-idea-jumble-service:30
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "200m"
              memory: "600Mi"
          imagePullPolicy: Always
          name: jumbledev-backend
          # startupProbe:
          #   httpGet:
          #     path: /actuator/health
          #     port: 8081
          #   failureThreshold: 30
          #   periodSeconds: 10
      imagePullSecrets:
        - name: registry-regcred
