projects/trainingteam2024/backend-idea-jumble/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jumbledev-backend
  name: jumbledev-backend-svc
  namespace: tt2024-dev
spec:
  ports:
    - port: 8096
      protocol: TCP
      targetPort: 8096
  selector:
    app: jumbledev-backend
