projects/trainingteam2024/backend-idea-jumble/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jumbledev-backend
  namespace: tt2024-dev
  labels:
    app: jumbledev-backend
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - tt2024-jumbledev-backend-dev.coherent.in
      secretName: backend-tls
  rules:
    - host: "tt2024-jumbledev-backend-dev.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jumbledev-backend-svc
                port:
                  number: 8096
